Changed the submit button to work on Firefox. fixes #196

--- a/config/themes/default/css/main.css
+++ b/config/themes/default/css/main.css
@@ -20,15 +20,13 @@ background-repeat:repeat-x;
 min-width:550px;
 }
 
-body, h1, h2, h3, h4, h5, h6, h7, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, field, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, .standard_paragraph b {
+body, h1, h2, h3, h4, h5, h6, h7, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, field, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, .standard_paragraph b, input {
 /*color:#333;*/
 font-family:Arial, Helvetica, sans-serif;
 font-size:12px;
 font-weight: normal;
 color: #666666;
 }
-
-ul li { list-style-type: none; }
 
 /* @group Global layout */
 
@@ -772,19 +770,24 @@ border-top:1px solid #D9D9D9;
 overflow:hidden;
 }
 
-.subButton a {
+.subButton input {
 float:right;
 background-color:#666;
-width:130px;
+width:140px;
 display:block;
 color:#FFF;
 -moz-border-radius:2px;
 -webkit-border-radius:2px;
 margin:10px;
-padding:14px 0 7px 10px;
+padding:14px 0 6px 7px;
+border:0 none;
+cursor:pointer;
+text-align:left;
 }
 
-.subButton a:hover {
+
+
+.subButton input:hover {
 background-color:#1A1A1A;
 }
 
